# flask_cities_api

./: .gitignore  MANIFEST.in  README.md  config.py  pyproject.toml  run.py  setup.cfg
flask_cities_api/: __init__.py  app.py  auth.py  blog.py  db.py  models.py  schemas.py  serializers.py
flask_cities_api/api/: __init__.py  auth.py  errors.py  routes.py
flask_cities_api/scraper/: __init__.py  main.py  pyproject.toml
flask_cities_api/scraper/data/: cities-rus.json
flask_cities_api/templates/: base.html
tests/: conftest.py  fixtures.py  test_api.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
