[tool.poetry]
name = "flask_cities_api"
version = "0.1.0"
description = "Flask Microservice API for finding towns and cities"
authors = ["mbrav <mbrav@protonmail.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = "3.8"
Flask = "^2.0.2"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
