[tool.poetry]
name = "flask_cities_api"
version = "0.1.0"
description = "Flask Microservice API for finding towns and cities"
authors = ["mbrav <mbrav@protonmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "3.8"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.27.0"

[tool.poetry.dev-dependencies]
pytest-flask = "^1.2.0"

[tool.pytest.ini_options]
minversion = "6.2"
testpaths = [
    "tests/",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
addopts = "-vv -p no:cacheprovider"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
